projects/vb6parse/snapshots/syntax/expressions/string_concatenation.snap
---
source: projects/vb6parse/src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: BinaryExpression
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Hello\""
                - kind: Whitespace
                  text: " "
                - kind: Ampersand
                  text: "&"
                - kind: Whitespace
                  text: " "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\" \""
            - kind: Whitespace
              text: " "
            - kind: Ampersand
              text: "&"
            - kind: Whitespace
              text: " "
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"World\""
        - kind: Newline
          text: "\n"
